--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,7 +7,7 @@ body{
 
 .wa-wrapper{
     position: fixed;
-    bottom: 80px;
+    bottom: 30px;
     right: 20px;
     border: none;
     cursor: pointer;
@@ -23,30 +23,6 @@ body{
             color: $white;
             font-size: 30px;
             vertical-align: middle;
-        }
-    }
-}
-
-
-.scroll-top{
-    display: none; 
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    border: none;
-    cursor: pointer;
-    z-index: 99;
-    transition: 0.2s all ease;
-
-    a{
-        background-color: $white;
-        border: 1px solid $primary-color;
-        padding: 14px 16px 10px;
-        border-radius: 100px;
-
-        i{
-            color: $primary-color;
-            font-size: 20px;
         }
     }
 }
@@ -464,22 +440,30 @@ footer{
     }
 }
 
-.feedback {
-    background-color : $secondary-color;
-    color: #fff !important;
-    padding: 10px 20px;
-    padding-bottom: 10px !important;
-    border-radius: 4px;
-    border-color: $secondary-color;
-    text-decoration: none;
-    }
     #mybutton {
     position: fixed;
-    bottom: 50%;
+    bottom: 40%;
     right: -50px;
     z-index: 99999;
     cursor: pointer;
     transform: rotate(-90deg);
+
+    .feedback {
+        background-color : $secondary-color;
+        color: #fff !important;
+        padding: 10px 20px;
+        padding-bottom: 10px !important;
+        border-radius: 4px;
+        border-color: $secondary-color;
+        text-decoration: none;
+    }
+
+    @media screen and (max-width: 767px) {
+        right: -33px;
+        .feedback{
+            font-size: 10px;
+        }
+    }
     }
     .intl-tel-input {
     position: relative;
